--- a/ProjectoEsw/ProjectoEsw.csproj
+++ b/ProjectoEsw/ProjectoEsw.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="MailKit" Version="1.22.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Localization" Version="2.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
   </ItemGroup>
 
