Ajuste views, adicao de actions candidato e tecnico

--- a/ProjectoEsw/ProjectoEsw.csproj
+++ b/ProjectoEsw/ProjectoEsw.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="Views\Administrador\" />
+    <Folder Include="Views\Erros\" />
   </ItemGroup>
 
 </Project>
