--- a/ProjectoEsw/ProjectoEsw.csproj
+++ b/ProjectoEsw/ProjectoEsw.csproj
@@ -26,6 +26,7 @@
     <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="Views\Administrador\" />
     <Folder Include="Views\Erros\" />
+    <Folder Include="wwwroot\Utilizadores\lidmcv%40gmail.com\Imagem\" />
   </ItemGroup>
 
 </Project>
